--- a/src/main/resources/static/goods_detail.htm
+++ b/src/main/resources/static/goods_detail.htm
@@ -1,12 +1,16 @@
-<!DOCTYPE HTML>
-<html >
+<!DOCTYPE html>
+<html>
 <head>
     <title>商品详情</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+
+    <title>商品详情</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <!-- jquery -->
     <script type="text/javascript" src="/js/jquery.min.js"></script>
     <!-- bootstrap -->
-    <link rel="stylesheet" type="text/css" href="/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="/bootstrap/css/bootstrap.min.css"/>
     <script type="text/javascript" src="/bootstrap/js/bootstrap.min.js"></script>
     <!-- jquery-validator -->
     <script type="text/javascript" src="/jquery-validation/jquery.validate.min.js"></script>
@@ -20,10 +24,12 @@
 </head>
 <body>
 
-<div class="panel panel-default">
+<div class="panel panel-default" style="height:100%;background-color:rgba(222,222,222,0.8)">
     <div class="panel-heading">秒杀商品详情</div>
     <div class="panel-body">
+        <!--如果user为空，则表明没有登录-->
         <span id="userTip"> 您还没有登录，请登陆后再操作<br/></span>
+        <span>没有收货地址的提示……</span>
     </div>
     <table class="table" id="goodslist">
         <tr>
@@ -32,18 +38,28 @@
         </tr>
         <tr>
             <td>商品图片</td>
-            <td colspan="3"><img  id="goodsImg" width="200" height="200" /></td>
+            <td colspan="3"><img id="goodsImg" width="200" height="200"/></td>
         </tr>
         <tr>
             <td>秒杀开始时间</td>
+            <!--格式转换-->
             <td id="startTime"></td>
-            <td >
-                <input type="hidden" id="remainSeconds" />
+            <!--秒杀状态-->
+            <td>
+                <input type="hidden" id="remainSeconds"/>
                 <span id="seckillTip"></span>
             </td>
             <td>
-                <button class="btn btn-primary btn-block" type="button" id="buyButton" onclick="doSeckill()">立即秒杀</button>
-                <input type="hidden" name="goodsId"  id="goodsId" />
+                <div class="row">
+                    <div class="form-inline">
+                        <img id="verifyCodeImg" width="80" height="32" style="display:none"
+                             onclick="refreshVerifyCode()"/>
+                        <input id="verifyCode" class="form-control" style="display:none"/>
+                        <button class="btn btn-primary" type="button" id="buyButton" onclick="getSeckillPath()">立即秒杀
+                        </button>
+                    </div>
+                </div>
+                <input type="hidden" name="goodsId" id="goodsId"/>
             </td>
         </tr>
         <tr>
@@ -52,61 +68,54 @@
         </tr>
         <tr>
             <td>秒杀价</td>
-            <td colspan="3"  id="seckillPrice"></td>
+            <td colspan="3" id="seckillPrice"></td>
         </tr>
         <tr>
             <td>库存数量</td>
-            <td colspan="3"  id="stockCount"></td>
+            <td colspan="3" id="stockCount"></td>
         </tr>
     </table>
 </div>
+
 </body>
+
 <script>
-    function getSeckillResult(goodsId){
+    /*秒杀接口隐藏*/
+    function getSeckillPath() {
+        var goodsId = $("#goodsId").val();
         g_showLoading();
         $.ajax({
-            url:"/seckill/result",
-            type:"GET",
-            data:{
-                goodsId:$("#goodsId").val(),
+            url: "/seckill/path",
+            type: "GET",
+            data: {
+                goodsId: goodsId,
+                verifyCode: $("#verifyCode").val()// 获取验证码的值
             },
-            success:function(data){
-                if(data.code == 0){
-                    var result = data.data;
-                    if(result < 0){
-                        layer.msg("对不起，秒杀失败");
-                    }else if(result == 0){//继续轮询
-                        setTimeout(function(){
-                            getSeckillResult(goodsId);
-                        }, 50);
-                    }else{
-                        layer.confirm("恭喜你，秒杀成功！查看订单？", {btn:["确定","取消"]},
-                            function(){
-                                window.location.href="/order_detail.htm?orderId="+result;
-                            },
-                            function(){
-                                layer.closeAll();
-                            });
-                    }
-                }else{
+            success: function (data) {
+                if (data.code == 0) {
+                    var path = data.data;// 获取服务端返回的秒杀地址
+                    doSeckill(path);// 真正做秒杀的接口
+                } else {
                     layer.msg(data.msg);
                 }
             },
-            error:function(){
+            error: function () {
                 layer.msg("客户端请求有误");
             }
         });
     }
-    function doSeckill() {
+
+    /*真正做秒杀的接口, path为服务端返回的秒杀接口地址*/
+    function doSeckill(path) {
         $.ajax({
-            url: "/seckill/do_seckill",
+            url: "/seckill/" + path + "/do_seckill",
             type: "POST",
             data: {
-                goodsId: $("#goodsId").val(),
+                goodsId: $("#goodsId").val()
             },
             success: function (data) {
                 if (data.code == 0) {
-//                    window.location.href = "/order_detail.htm?orderId=" + data.data.id;
+                    //window.location.href="/order_detail.htm?orderId="+data.data.id;
                     getSeckillResult($("#goodsId").val());
                 } else {
                     layer.msg(data.msg);
@@ -118,6 +127,70 @@
         });
     }
 
+    /*获取秒杀的结果*/
+    function getSeckillResult(goodsId) {
+        g_showLoading();// 加载中
+        $.ajax({
+            url: "/seckill/result",
+            type: "GET",
+            data: {
+                goodsId: $("#goodsId").val(),
+            },
+            success: function (data) {
+                if (data.code == 0) {
+                    var result = data.data;
+                    if (result < 0) {
+                        layer.msg("对不起，秒杀失败");
+                    } else if (result == 0) {// 继续轮询
+                        setTimeout(function () {
+                            getSeckillResult(goodsId);
+                        }, 200);// 轮询间隔200ms
+                    } else {
+                        layer.confirm("恭喜你，秒杀成功！查看订单？", {btn: ["确定", "取消"]},
+                            // 确定的回调
+                            function () {
+                                window.location.href = "/order_detail.htm?orderId=" + result;
+                            },
+                            // 取消的回调
+                            function () {
+                                layer.closeAll();
+                            });
+                    }
+                } else {
+                    layer.msg(data.msg);
+                }
+            },
+            error: function () {
+                layer.msg("客户端请求有误");
+            }
+        });
+    }
+
+    // 使用ajax从服务端请求页面数据, 跳转到这个页面时就会执行(function有$)
+    $(function () {
+        // countDown();
+        getDetail();// 获取商品详情
+    });
+
+    function getDetail() {
+        var goodsId = g_getQueryString("goodsId");// goodsId为goods_list.html中详情url中的参数
+        $.ajax({
+            url: "/goods/detail/" + goodsId,
+            type: "GET",
+            success: function (data) {
+                if (data.code == 0) {
+                    render(data.data);
+                } else {
+                    layer.msg(data.msg);
+                }
+            },
+            error: function () {
+                layer.msg("客户端请求有误");
+            }
+        });
+    }
+
+    /*渲染页面*/
     function render(detail) {
         var seckillStatus = detail.seckillStatus;
         var remainSeconds = detail.remainSeconds;
@@ -134,30 +207,7 @@
         $("#goodsPrice").text(goods.goodsPrice);
         $("#seckillPrice").text(goods.seckillPrice);
         $("#stockCount").text(goods.stockCount);
-    }
-
-    $(function () {
         countDown();
-        getDetail();
-    });
-
-    function getDetail() {
-        var goodsId = g_getQueryString("goodsId");
-        $.ajax({
-            url: "/goods/detail/" + goodsId,
-            type: "GET",
-            success: function (data) {
-                if (data.code == 0) {
-                    //将数据渲染出来
-                    render(data.data);
-                } else {
-                    layer.msg(data.msg);
-                }
-            },
-            error: function () {
-                layer.msg("客户端请求有误");
-            }
-        });
     }
 
     function countDown() {
@@ -177,11 +227,24 @@
                 clearTimeout(timeout);
             }
             $("#seckillTip").html("秒杀进行中");
+            // 在倒计时结束时获取验证码（使用ajax异步向服务器请求验证码图片）
+            $("#verifyCodeImg").attr("src", "/seckill/verifyCode?goodsId=" + $("#goodsId").val());
+            $("#verifyCodeImg").show();// 从服务器加载完验证码图片后，显示出来
+            $("#verifyCode").show();
         } else {//秒杀已经结束
             $("#buyButton").attr("disabled", true);
             $("#seckillTip").html("秒杀已经结束");
+            $("#verifyCodeImg").hide();
+            $("#verifyCode").hide();
         }
     }
 
+    /*点击验证码图片时，从服务器异步获取另一张验证码码图片*/
+    function refreshVerifyCode() {
+        $("#verifyCodeImg").attr("src", "/seckill/verifyCode?goodsId=" + $("#goodsId").val() + "&timestamp=" + new Date().getTime());
+    }
+
 </script>
+
+
 </html>
