--- a/src/main/resources/static/order_detail.htm
+++ b/src/main/resources/static/order_detail.htm
@@ -1,12 +1,14 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
 <head>
     <title>订单详情</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <!-- jquery -->
     <script type="text/javascript" src="/js/jquery.min.js"></script>
     <!-- bootstrap -->
-    <link rel="stylesheet" type="text/css" href="/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="/bootstrap/css/bootstrap.min.css"/>
     <script type="text/javascript" src="/bootstrap/js/bootstrap.min.js"></script>
     <!-- jquery-validator -->
     <script type="text/javascript" src="/jquery-validation/jquery.validate.min.js"></script>
@@ -17,22 +19,25 @@
     <script type="text/javascript" src="/js/md5.min.js"></script>
     <!-- common.js -->
     <script type="text/javascript" src="/js/common.js"></script>
+
 </head>
 <body>
+
+
 <div class="panel panel-default">
     <div class="panel-heading">秒杀订单详情</div>
     <table class="table" id="goodslist">
         <tr>
             <td>商品名称</td>
-            <td colspan="3" id="goodsName"></td>
+            <td id="goodsName" colspan="3"></td>
         </tr>
         <tr>
             <td>商品图片</td>
-            <td colspan="2"><img  id="goodsImg" width="200" height="200" /></td>
+            <td colspan="2"><img id="goodsImg" width="200" height="200"/></td>
         </tr>
         <tr>
             <td>订单价格</td>
-            <td colspan="2"  id="orderPrice"></td>
+            <td colspan="2" id="orderPrice"></td>
         </tr>
         <tr>
             <td>下单时间</td>
@@ -48,7 +53,8 @@
         </tr>
         <tr>
             <td>收货人</td>
-            <td colspan="2">XXX  18812341234</td>
+
+            <td colspan="2">XXX 18812341234</td>
         </tr>
         <tr>
             <td>收货地址</td>
@@ -56,10 +62,14 @@
         </tr>
     </table>
 </div>
+
+
 </body>
+
 </html>
+
 <script>
-    function render(detail){
+    function render(detail) {
         var goods = detail.goods;
         var order = detail.order;
         $("#goodsName").text(goods.goodsName);
@@ -67,36 +77,46 @@
         $("#orderPrice").text(order.goodsPrice);
         $("#createDate").text(new Date(order.createDate).format("yyyy-MM-dd hh:mm:ss"));
         var status = "";
-        if(order.status == 0){
+        if (order.status == 0) {
             status = "未支付"
-        }else if(order.status == 1){
+        } else if (order.status == 1) {
             status = "待发货";
+        } else if (order.status == 2) {
+            status = "已发货";
+        } else if (order.status == 3) {
+            status = "已收货";
+        } else if (order.status == 4) {
+            status = "已退款";
+        } else if (order.status == 5) {
+            status = "已完成";
         }
         $("#orderStatus").text(status);
     }
 
-    $(function(){
+    // 这个函数在跳转到这个页面时立即执行
+    $(function () {
         getOrderDetail();
-    })
+    });
 
-    function getOrderDetail(){
+    function getOrderDetail() {
         var orderId = g_getQueryString("orderId");
         $.ajax({
-            url:"/order/detail",
-            type:"GET",
-            data:{
-                orderId:orderId
+            url: "/order/detail",
+            type: "GET",
+            data: {
+                orderId: orderId
             },
-            success:function(data){
-                if(data.code == 0){
+            success: function (data) {
+                if (data.code == 0) {
                     render(data.data);
-                }else{
+                } else {
                     layer.msg(data.msg);
                 }
             },
-            error:function(){
+            error: function () {
                 layer.msg("客户端请求有误");
             }
         });
     }
+
 </script>
